TokenField2 to TokenField